2010-11-04  Chris Guillory  <chris.guillory@google.com>

Reviewed by Chris Fleizach.

        Ignore static text children of text field controls in the accessibility tree.
        https://bugs.webkit.org/show_bug.cgi?id=48944

        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::accessibilityIsIgnored):

git-svn-id: svn://svn.chromium.org/blink/trunk@71317 bbb929c8-8fbe-4397-9dbb-9b2b20218538